@@ -30,22 +30,26 @@ printf(...)
               ║   │                                          resizeVTerm()║
               ╚═══▼═══════════════════════════════════════════════════════╝
                   │
-                  │    putVTerm()      ┌───────────────┐
-                  └───────────────────►│ output_buffer │
-                    updateTerminal()   └───────┬───────┘
-                                               │
-                                               │ flush_out() 
-                                               │     +
-                                               │ Fputchar(char)
-                                               │
-                                               ▼
-                                       ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
-                                       ▌               ▐
-                                       ▌    screen     ▐
-                                       ▌ ───────────── ▐
-                                       ▌ real terminal ▐
-                                       ▌               ▐
-                                       ▀▀▀▀▀▀▀███▀▀▀▀▀▀▀
-                                              ███
-                                           ▀▀▀▀▀▀▀▀▀
+                  │    putVTerm()
+                  └──────────────────► updateTerminalLine(y)
+                    updateTerminal()             │
+                                                 ▼
+                                         ┌───────────────┐
+                                         │ output_buffer │
+                                         └───────────────┘
+                                                 │
+                                                 │ flush_out() 
+                                                 │     +
+                                                 │ Fputchar(char)
+                                                 │
+                                                 ▼
+                                         ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
+                                         ▌               ▐
+                                         ▌    screen     ▐
+                                         ▌ ───────────── ▐
+                                         ▌ real terminal ▐
+                                         ▌               ▐
+                                         ▀▀▀▀▀▀▀███▀▀▀▀▀▀▀
+                                                ███
+                                             ▀▀▀▀▀▀▀▀▀
 
